<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_bar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/topbar" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15.0dip"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:paddingTop="15.0dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/list_blockbg_top_selector"
                android:clickable="true" >

                <TextView
                    android:id="@+id/sms_seting"
                    style="@style/topbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="50.0dip"
                    android:layout_alignParentLeft="true"
                    android:drawablePadding="10.0dip"
                    android:ellipsize="marquee"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingLeft="20.0dip"
                    android:paddingRight="15.0dip"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:text="@string/down_install"
                    android:textSize="@dimen/textsize_item_big" />

                <CheckBox
                    android:id="@+id/jifen"
                    android:layout_width="wrap_content"
                    android:layout_height="50.0dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8sp"
                    android:drawablePadding="10.0dip"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingLeft="20.0dip"
                    android:paddingRight="15.0dip"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textSize="@dimen/textsize_item_big" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@color/gray_hint" />

            <TextView
                android:id="@+id/backup"
                style="@style/topbar_title"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/list_blockbg_bottom_selector"
                android:clickable="true"
                android:drawablePadding="10.0dip"
                android:drawableRight="@drawable/hi_setting_more"
                android:ellipsize="marquee"
                android:focusable="true"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingLeft="20.0dip"
                android:paddingRight="15.0dip"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/app_fankui"
                android:textSize="@dimen/textsize_item_big" />

            <TextView
                android:id="@+id/about"
                style="@style/topbar_title"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/list_blockbg_top_selector"
                android:clickable="true"
                android:drawablePadding="10.0dip"
                android:ellipsize="marquee"
                android:focusable="true"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingLeft="20.0dip"
                android:paddingRight="15.0dip"
                android:singleLine="true"
                android:text="@string/about"
                android:textSize="@dimen/textsize_item_big" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@color/gray_hint" />

            <TextView
                android:id="@+id/update_tv"
                style="@style/topbar_title"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/list_blockbg_middle_selector"
                android:clickable="true"
                android:drawablePadding="10.0dip"
                android:ellipsize="marquee"
                android:focusable="true"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingLeft="20.0dip"
                android:paddingRight="15.0dip"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/update"
                android:textSize="@dimen/textsize_item_big" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@color/gray_hint" />

            <TextView
                android:id="@+id/tuichu"
                style="@style/topbar_title"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@drawable/list_blockbg_bottom_selector"
                android:clickable="true"
                android:drawablePadding="10.0dip"
                android:ellipsize="marquee"
                android:focusable="true"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingLeft="20.0dip"
                android:paddingRight="15.0dip"
                android:singleLine="true"
                android:text="@string/exit"
                android:textSize="@dimen/textsize_item_big" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>