<?xml version="1.0" encoding="utf-8"?>
<!-- 应用详情页布局 -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bk_appdetail"
        android:orientation="vertical" >

        <!-- 头部apk信息 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_detail_title_divider_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="6dip"
            android:paddingLeft="5dip"
            android:paddingRight="10dip"
            android:paddingTop="6dip" >

            <!-- 返回的icon -->

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dip"
                android:layout_marginRight="0dip"
                android:contentDescription="@null"
                android:src="@drawable/btn_back_p" />
            <!-- 应用icon -->

            <ImageView
                android:id="@+id/app_icon1"
                android:layout_width="46dip"
                android:layout_height="46dip"
                android:layout_marginRight="5dip"
                android:contentDescription="@null"
                android:src="@drawable/app_detail_empty_icon" />
            <!-- 应用名称、开发者 -->

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/app_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:textSize="16dip" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/app_developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="安卓开发者"
                        android:textColor="#535353"
                        android:textSize="14dip" />
                    <!-- 应用下载量 -->

                    <TextView
                        android:id="@+id/app_download_counts1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/app_detail_download_counts"
                        android:textSize="14dip" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/app_detail_gallery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip" >

            <ImageView
                android:id="@+id/app_icon2"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_marginRight="5dip"
                android:contentDescription="@null"
                android:src="@drawable/app_detail_empty_icon" />
            <!-- 应用名称、开发者 -->

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/app_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dip"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/app_size1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_detail_size"
                    android:textColor="#bcbec0"
                    android:textSize="13sp" />
                <!-- 应用下载量 -->

                <TextView
                    android:id="@+id/app_download_counts2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_detail_download_counts"
                    android:textColor="#bcbec0"
                    android:textSize="13sp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/state_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/iv_operate_app_detail"
                    android:layout_width="65dip"
                    android:layout_height="28dip"
                    android:layout_marginRight="10dip"
                    android:clickable="true"
                    android:focusable="false"
                    android:gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/install_btn"
                    android:textColor="#0066FF"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_operate_app_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="1dip"
                    android:layout_marginRight="15dip"
                    android:textColor="#ffffff" />
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="vertical" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/navigation_backgroung" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@drawable/shade" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:id="@+id/tv_appdesc_app_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/bk_navigate_tv_appdetail"
                    android:gravity="center"
                    android:text="应用介绍"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_appcomment_app_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="应用评论"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>

        <ListView
            android:id="@+id/list_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dip"
            android:listSelector="@drawable/list_item_selector"
            android:visibility="gone" >
        </ListView>

        <!-- 详细内容 -->

        <me.key.appmarket.widgets.CustomScrollView
            android:id="@+id/scroll_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dip"
            android:fadingEdge="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="8dp"
                    android:text="基本信息"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/app_detail_version"
                        android:textColor="#bcbec0"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/app_size2"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/app_detail_size"
                        android:textColor="#bcbec0"
                        android:textSize="13sp" />
                </LinearLayout>
                <!-- 更新时间、语言 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/app_update_time"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/app_detail_update_time"
                        android:textColor="#bcbec0"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/app_language"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/app_detail_language"
                        android:textColor="#bcbec0"
                        android:textSize="13sp" />
                </LinearLayout>
                <!-- 软件介绍 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@drawable/divideline_app_detail" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="软件介绍"
                        android:textColor="#ffffff"
                        android:textSize="15sp" />

                    <me.key.appmarket.widgets.EllipsizingTextView
                        android:id="@+id/app_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="8dip"
                        android:ellipsize="marquee"
                        android:lineSpacingExtra="3dip"
                        android:maxLines="5"
                        android:singleLine="false"
                        android:textColor="#bcbec0"
                        android:textSize="13sp" />
                    <!-- 软件介绍，按钮 -->

                    <ImageButton
                        android:id="@+id/app_des_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="10dip"
                        android:background="@null"
                        android:paddingBottom="10dip"
                        android:paddingLeft="20dip"
                        android:paddingRight="30dip"
                        android:paddingTop="8dip"
                        android:src="@drawable/app_detail_des_expand_button" />
                </LinearLayout>
            </LinearLayout>
        </me.key.appmarket.widgets.CustomScrollView>
    </LinearLayout>

</FrameLayout>